--- a/FONTES/bdmg_teste.dproj
+++ b/FONTES/bdmg_teste.dproj
@@ -76,6 +76,8 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppEnableHighDPI>true</AppEnableHighDPI>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -94,8 +96,12 @@
         <DCCReference Include="UntConexaoBD.pas"/>
         <DCCReference Include="UntControleConexao.pas"/>
         <DCCReference Include="UntControleCliente.pas"/>
-        <DCCReference Include="UntCadCliente.pas">
-            <Form>FrmCadCliente</Form>
+        <DCCReference Include="UntPadraoCadastro.pas">
+            <Form>FrmPadraoCadastro</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="UntCadastroCliente.pas">
+            <Form>FrmCadastroCliente</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
@@ -118,6 +124,10 @@
                 <Source>
                     <Source Name="MainSource">bdmg_teste.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k250.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp250.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="Win32\Debug\bdmg_teste.exe" Configuration="Debug" Class="ProjectOutput">
